--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,34 +8,31 @@
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/innerLayout1"
         android:layout_width="409dp"
         android:layout_height="356dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="374dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="407dp"
-            android:layout_height="354dp"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="95dp">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <!-- Здесь могут быть добавлены элементы, если нужно -->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="409dp"
-        android:layout_height="356dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="0dp">
-
+        android:id="@+id/innerLayout2"
+        android:layout_width="407dp"
+        android:layout_height="354dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/innerLayout1">
+        <!-- Здесь могут быть добавлены элементы, если нужно -->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="101dp"
         android:layout_height="15dp"
         android:text="Ivan Zhukov"
-        tools:layout_editor_absoluteX="157dp"
-        tools:layout_editor_absoluteY="358dp"
-        tools:text="Ivan Zhukov" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/innerLayout2"
+        android:textSize="14sp"
+        android:padding="8dp"
+        android:gravity="center" />
 </androidx.constraintlayout.widget.ConstraintLayout>
